Fixed right text box alignment.

--- a/css/styles.css
+++ b/css/styles.css
@@ -347,7 +347,7 @@ header{
 
 .left #line{
     width: 0px;
-    margin-left: 573.5px; 
+    margin-left: 573px; 
     height: 358px; 
     position: absolute; 
     border: 3px solid #FFE600;
@@ -355,7 +355,7 @@ header{
 
 .right #line{
     width: 0px;
-    margin-left: -25.5px; 
+    margin-left: -26px; 
     height: 358px; 
     position: absolute; 
     border: 3px solid #FFE600; 
